--- a/book.tex
+++ b/book.tex
@@ -52,15 +52,15 @@
 
 % Part II: Implementation
 %\part{tex/Part2}
-%\input{tex/10}
+\input{tex/10}
 %\input{tex/11}
 %\input{tex/12}
 %\input{tex/13}
 %\input{tex/14}
 %\input{tex/15}
-%\input{tex/16}
+\input{tex/16}
 %\input{tex/17}
-%\input{tex/18}
+\input{tex/18}
 %\input{tex/19}
 
 % Part III: Applications
