Minor fix in Chapter 18

--- a/tex/18.tex
+++ b/tex/18.tex
@@ -164,7 +164,7 @@ constitutive equation impacts the formulation and implementation of
 the constitutive equation, but not the formulation and implementation
 of the conservation equations.
 
-In Unicorn we have currently implemented two constitutive laws:
+In Unicorn, we have currently implemented two constitutive laws:
 Newtonian fluid and incompressible Neo-Hookean solid \citep{HoffmanJanssonStockli2011}.
 
 %------------------------------------------------------------------------------
