--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -2200,12 +2200,14 @@ J.~Hoffman, J.~Jansson, and M.~St\"ockli.
 \newblock Unified continuum modeling of fluid-structure interaction.
 \newblock \emph{Mathematical Models and Methods in Applied Sciences}, 2011.
 
-\bibitem[Hoffman et~al.(in press)Hoffman, Jansson, and
+\bibitem[Hoffman et~al.(2011{\natexlab{a}})Hoffman, Jansson, and
   de~Abreu]{HoffmanJansson2011}
 J.~Hoffman, J.~Jansson, and R.~V. de~Abreu.
 \newblock Adaptive modeling of turbulent flow with residual based turbulent
   kinetic energy dissipation.
-\newblock \emph{Comput. Meth. Appl. Mech. Engrg.}, in press.
+\newblock \emph{Comput. Meth. Appl. Mech. Eng.}, 200\penalty0 (37-40):\penalty0
+  2758 -- 2767, 2011{\natexlab{a}}.
+\newblock ISSN 0045-7825.
 
 \bibitem[Hofmann et~al.(2000)Hofmann, Warmuth-Metz, Bendszus, and
   Solymosi]{HofmannWarmuth-MetzBendszusEtAl2000}
@@ -3030,9 +3032,17 @@ J.~C. Nagtegaal, D.~M. Parks, and J.~R. Rice.
 
 \bibitem[Nazarov(2009)]{Nazarov2009}
 M.~Nazarov.
-\newblock An adaptive finite element method for the compressible {E}uler
-  equations, 2009.
-\newblock Licentiate Thesis.
+\newblock \emph{An adaptive finite element method for the compressible {E}uler
+  equations}.
+\newblock Licentiate thesis, 2009.
+
+\bibitem[Nazarov(2011)]{Nazarov2011}
+M.~Nazarov.
+\newblock \emph{Adaptive Algorithms and High Order Stabilization for Finite
+  Element Computation of Turbulent Compressible Flow}.
+\newblock PhD thesis, KTH, Numerical Analysis, NA, 2011.
+\newblock QC 20110627.
+
 
 \bibitem[N{\'e}d{\'e}lec(1980)]{Nedelec1980}
 J.-C. N{\'e}d{\'e}lec.
