Initial updates in code examples to match DOLFIN unit tests

--- a/tex/10.tex
+++ b/tex/10.tex
@@ -354,23 +354,27 @@ operator $A$, the operator can be set post-construction:
 \begin{c++}
 KrylovSolver solver;
 solver.set_operator(A);
+solver.solve(x, b);
 \end{c++}
 
 \begin{python}
 solver = KrylovSolver()
 solver.set_operator(A)
+solver.solve(x, b)
 \end{python}
 In some cases, it may be useful to use a preconditioner matrix $P$ that
 differs from~$A$:
 
 \begin{c++}
 KrylovSolver solver;
-solver.set_operators(A, P)
+solver.set_operators(A, P);
+solver.solve(x, b);
 \end{c++}
 
 \begin{python}
 solver = KrylovSolver()
 solver.set_operators(A, P)
+solver.solve(x, b)
 \end{python}
 Various parameters for Krylov solvers can be set. Some common parameters
 are:
@@ -380,7 +384,7 @@ solver = KrylovSolver()
 solver.parameters["relative_tolerance"]      = 1.0e-6
 solver.parameters["absolute_tolerance"]      = 1.0e-15
 solver.parameters["divergence_limit"]        = 1.0e4
-solver.parameters["maximum_iterations"]      = 1.0e4
+solver.parameters["maximum_iterations"]      = 10000
 solver.parameters["error_on_nonconvergence"] = True
 solver.parameters["nonzero_initial_guess"]   = False
 \end{python}
