Apply changes from Rob to Chapter 13

--- a/tex/13.tex
+++ b/tex/13.tex
@@ -64,7 +64,7 @@ maps from the triangle to the square.  The set $\{ D^{p,q}(x, y)
 of degree~$n$).  Moreover, they are orthogonal in the $L^2(T)$ inner
 product.  Recently, it has been shown that these polynomials may be
 computed directly on the triangle without reference to the singular
-mapping \citep{Kirby2009}.  This means that no special treatment of
+mapping \citep{Kirby}.  This means that no special treatment of
 the singular point is required, allowing use of standard automatic
 differentiation techniques to compute derivatives.
 
@@ -87,7 +87,7 @@ still admit sum-factorization techniques.  More importantly for
 present purposes, each \( \chi^p \) is in fact a polynomial in \(
 x \) and \( y \) and may be computed by recurrence.  \( \psi^{p,q}
 \) is just a Jacobi polynomial in \( y \) and so has a well-known
-three-term recurrence.  The recurrences derived in \citet{Kirby2009}
+three-term recurrence.  The recurrences derived in \citet{Kirby}
 are presented in Algorithm~\ref{dubalg}, where, the coefficients \(
 a_n^{\alpha,\beta},b_n^{\alpha,\beta},c_n^{\alpha,\beta} \) refer to
 those used in the Jacobi polynomial recurrences.
@@ -143,7 +143,7 @@ since \texttt{numpy.dot} wraps level 3 BLAS and other functions such as
 \texttt{numpy.svd} wrap relevant LAPACK routines.
 
 Since polynomials and functionals over polynomials both form vector
-spaces, it is natural to represent each of them as vectors representing
+spaces, it is natural to represent each of them as vectors containing
 expansion coefficients in some basis.  So, let \( \{ \phi_i \} \) be the
 Dubiner polynomials described above, where we have assumed
 some linear indexing of the Dubiner polynomials.
