Small final change in Chapter 13

--- a/tex/13.tex
+++ b/tex/13.tex
@@ -34,7 +34,7 @@ where $V_{ij} = \ell_i( \phi_j)$.  Of course, forming this matrix
 requires some calculations, and we will discuss this further in a
 later section.  The columns of $A = V^{-1}$ store the expansion
 coefficients of the nodal basis for $(T,\CiarletSpace,\mathcal{L})$ in
-terms of some other basis $\{\psi_i\}$.
+terms of some other basis $\{\phi_i\}$.
 
 %------------------------------------------------------------------------------
 \section{Prime basis: collapsed-coordinate polynomials}
