Minor fix in Chapter 22

--- a/tex/22.tex
+++ b/tex/22.tex
@@ -720,7 +720,7 @@ steps here in detail.
   $n_v\times n_v$ matrices for a term in a component equation and
   insert it into the relevant places in the total coefficient matrix.
   For example, to assemble a convection matrix for one component,
-  define a \emp{FunctionSpace} \emp{Vc} for one scalar velocity component 
+  define a \emp{FunctionSpace} \emp{Vc} for one scalar velocity component
   identical to the vector space \emp{V.sub(0)}:
 \begin{python}
 uc = TrialFunction(Vc)
@@ -1072,7 +1072,7 @@ of Figure~\ref{fig:mortensen:OS_init}.
   \includegraphics[width=\twofigs]{chapters/mortensen/pdf/OS_init.pdf}
   \includegraphics[width=\twofigs]{chapters/mortensen/pdf/OrrS_eigvals.pdf}
   \caption{The left figure shows a snapshot of the initial perturbed velocity
-    field. The figure on the right shows the eigenvalues for the Orr Sommerfeld equation
+    field. The figure on the right shows the eigenvalues for the Orr--Sommerfeld equation
     at $Re=8000$. Note the open square, which is the only eigenvalue
     with a positive imaginary part. This represents an unstable mode.}
   \label{fig:mortensen:OS_init}
