Small typo fixes --> metadata

--- a/tex/4.tex
+++ b/tex/4.tex
@@ -166,7 +166,7 @@ here simplifies software for the following tasks:
 topological facets of $T$ such as its vertices, edges and its
 placement on the edges.
 
-\item Associate each basis function with additional meta-data that
+\item Associate each basis function with additional metadata that
 describes the mapping that should be used for the evaluation of the
 basis functions and their derivatives.
 
