Typo fixes: ": Find" --> ": find"

--- a/tex/17.tex
+++ b/tex/17.tex
@@ -225,7 +225,7 @@ The finite element method is presented in Chapter~\ref{chap:kirby-7},
 so we will only very briefly cover the steps we take here.  First we
 multiply Equation~\eqref{ufl:eq:ppeqzero} with a test function $\bphi
 \in V$, then integrate over the domain $\Omega$, and integrate by parts.
-The nonlinear variational problem then reads: Find $\uu \in V$ such that
+The nonlinear variational problem then reads: find $\uu \in V$ such that
 \begin{align}
 L(\uu; \bphi) &= \int_\Omega \FF\SS : \Grad\bphi \dx = 0
   \quad \foralls \bphi \in V. \label{ufl:eq:hypdefL}
