--- a/tex/32.tex
+++ b/tex/32.tex
@@ -125,7 +125,7 @@ basin.
 In a slightly more abstract setting, the task is to minimize an
 objective functional $J$ which implicitly depends on the parameters
 $p$ via $u$ subject to the constraint that $u$ satisfies some PDE
-model; a PDE constrained minimization problem: Find $p$ such that
+model; a PDE constrained minimization problem: find $p$ such that
 $J(p)=J(u(p))=\min$ and $\mathrm{PDE}(u,p)=0$.
 
 \index{steepest descent}
