--- a/tex/35.tex
+++ b/tex/35.tex
@@ -42,7 +42,7 @@ Stokes problem and finally a mixed formulation of the Hodge Laplacian.
 This presentation of preconditioning is largely taken from the review
 paper~\citep{MardalWinther11}, where a more comprehensive mathematical
 presentation is given. Consider the following abstract formulation of
-a linear PDE problem: Find $u$ in a Hilbert space $H$ such that:
+a linear PDE problem: find $u$ in a Hilbert space $H$ such that:
 \begin{equation}
 \mathcal{A} u = f,
 \end{equation}
@@ -144,7 +144,7 @@ and \emp{Subdomains} are often removed to shorten the presentation.
 
 \subsection{The Poisson problem with homogeneous Neumann conditions}
 The Poisson equation with Neumann conditions reads:
-Find $u$ such that
+find $u$ such that
 \begin{align}
   -\Div \Grad u &= f \mbox{ in } \Omega,  \\
   \frac{\partial u}{\partial n} &= g \mbox{ on } \partial \Omega .
