Typo fixes: "FEniCS project" --> "FEniCS Project"

--- a/tex/28.tex
+++ b/tex/28.tex
@@ -4,7 +4,7 @@
               {Johan Hoffman, Johan Jansson, Niclas Jansson, Claes Johnson and Rodrigo Vilela De Abreu}
               {hoffman-1}
 
-The FEniCS project aims towards the goals of generality, efficiency,
+The FEniCS Project aims towards the goals of generality, efficiency,
 and simplicity, concerning mathematical methodology, implementation
 and application, and the Unicorn project is an implementation aimed at
 FSI and high Re turbulent flow guided by these principles. Unicorn is
