--- a/tex/31.tex
+++ b/tex/31.tex
@@ -1080,7 +1080,7 @@ of the code scales with the complexity of the numerical algorithm.
 The numerical simulations presented here are spatially two-dimensional and
 serve as a simplified model. Realistic three-dimensional simulations would
 require taking advantage of the parallel, and possibly more sophisticated
-adaptive, features of the FEniCS project. However, such would not require
+adaptive, features of the FEniCS Project. However, such would not require
 significant additional problem-specific implementational effort, though
 preconditioning would have to be carefully considered.
 
