--- a/tex/20.tex
+++ b/tex/20.tex
@@ -172,7 +172,7 @@ the Taylor-Hood element corresponds to {\tt U\_element = Lagrange},
 The Crouzeix--Raviart element~\citep{CrouzeixRaviart1973} is a
 non-conforming element that uses integral moments over cell edges as
 a basis for the velocity, and a discontinuous pressure space that is
-one order lower than the velocity space.  For the low-order case,
+one order lower than the velocity space.  For the lowest order case,
 the velocity edge moments are equivalent to evaluating Lagrange
 basis functions at the center of each edge and the pressure uses
 $P_0$ (see Figure~\ref{fig:terrel:CRElements}).  For the extract
@@ -215,7 +215,7 @@ P = VectorFunctionSpace(mesh, "Lagrange", U_order)
 B = VectorFunctionSpace(mesh, "Bubble", U_order + 2)
 V = P + B
 \end{python}
-\caption{\ufl{} input for defining the MINI element.}
+\caption{\ufl{} input for defining the MINI element velocity space.}
 \label{code:terrel:MINI}
 \end{figure}
 
@@ -286,7 +286,7 @@ are used. This method will be referred to as ``STAB''. The stabilized
 method that we adopt is simple, but it does violate consistency
 for orders~$q > 1$.  Figure~\ref{code:terrel:var:stab} illustrates
 the addition of the stabilization terms to the standard weak form in
-Figure~\ref{code:terrel:var:mixed}.  Figure~\ref{tab:terrel:element_vars}
+Figure~\ref{code:terrel:var:mixed}.  Table~\ref{tab:terrel:element_vars}
 includes the definitions for the STAB element.
 
 \begin{figure}
@@ -337,9 +337,9 @@ $\|u^{n+1} - u^{n}\| < \epsilon$, where $\epsilon$ is a prescribed
 tolerance. This method involves only one function space, but it
 requires a higher-order continuous element ($q \ge 4$) and it solves
 the divergence-free criterion exactly. The iteration count and
-accuracy is dependent upon the penalty parameters $\rho$ and~$r$.  For
+accuracy are dependent upon the penalty parameters $\rho$ and~$r$.  For
 our experiments we use $\rho = -r = 1 \times 10^{3}$.  The
-implementation of this form is presented in
+implementation of this formulation is presented in
 Figure~\ref{code:terrel:var:ip}.
 %
 \begin{figure}
@@ -360,12 +360,14 @@ r = -rho
 # Define the variational problem
 a = inner(grad(u), grad(v))*dx + r*div(u)*div(v)*dx
 L = inner(f, v)*dx + inner(div(w), div(v))*dx
-pde = VariationalProblem(a, L, bc0)
+U = Function(V)
+pde = LinearVariationalProblem(a, L, U, bc0)
+solver = LinearVariationalSolver(pde);
 
 # Iterate to fix point
 iters = 0; max_iters = 100; U_m_u = 1
 while iters < max_iters and U_m_u > 1e-8:
-    U = pde.solve()
+    solver.solve()
     w.vector().axpy(rho, U.vector())
     if iters != 0:
         U_m_u = (U.vector() - u_old_vec).norm("l2")
@@ -382,7 +384,7 @@ while iters < max_iters and U_m_u > 1e-8:
 
 To evaluate the presented methods, we compare the computed results to
 a manufactured solution for different mesh refinements and element
-degrees. All simulations used \fenics{} tools to generate the
+degrees. All simulations use \fenics{} tools to generate the
 discrete problems (\ffc{} v0.7.0, \dolfin{} v0.9.4, \ufl{} v0.4.0,
 \ufc{} v1.2.0), with the \packagefont{UMFPACK} LU solver (from the
 \packagefont{SuiteSparse} package v3.4).  For iterative methods
@@ -454,7 +456,7 @@ cases are shown in Table~\ref{tab:terrel:DOFs}.
   \caption{A comparison of the number of degrees of freedom organized
   by velocity order ($q$) and number of mesh divisions per dimension
   ($n$). A `-' indicates that the order for that particular element is
-  not stable, undefined; an `x' indicates it is currently not
+  not stable; an `x' indicates it is currently not
   implemented.}  \label{tab:terrel:DOFs}
 \end{table}
 
@@ -506,7 +508,7 @@ from the analytical test problem to the lid-driven cavity, only a
 change in the boundary condition functions and the right-hand side
 $f$ are required.  The pressure field, which is determined only up to
 an arbitrary constant, is ``pinned'' at zero at one pressure degree
-of freedom.  Given one of the above domains and one of the defined
+of freedom.  Given a mesh and one of the defined
 variational problems, \dolfin{} will use \ffc{} and \fiat{} to generate
 the necessary computer code automatically, allowing for one script to
 test all the methods.
@@ -572,23 +574,23 @@ mesh = UnitSquare(h_num, h_num, "crossed")
 
 # Instantiate the boundary conditions
 noslip_domain = NoSlipDomain()
-noslip_val = Constant(mesh, (0.0, 0.0))
+noslip_val = Constant((0.0, 0.0))
 top_domain = Top()
 top_val = Expression(("x[0]*(1.0 - x[0])", "0.0"))
 pinpoint = PinPoint()
-pin_val = Constant(mesh, 0.0)
+pin_val = Constant(0.0)
 
 # Define the RHS
-f = Constant(mesh, (0.0, 0.0))
+f = Constant((0.0, 0.0))
 \end{python}
 \caption{\dolfin{} code for defining the lid-driven cavity domain.}
 \label{code:terrel:domain:lid}
 \end{figure}
 
 In computing the error for the analytical test cases in terms of
-function norms, the exact solution is interpolated using 10th degree
-Lagrange elements. The code for computing the error is presented in
-Figure~\ref{code:terrel:error}.
+function norms, the exact solution is interpolated using Lagrange
+elements of degree~10. The code for computing the error is presented
+in Figure~\ref{code:terrel:error}.
 
 \begin{figure}
 \bwfig
@@ -620,7 +622,7 @@ on cells.}
 %------------------------------------------------------------------------------
 \subsection{Results}
 
-The observed convergence orders in the $L^{2}$ norm of the velocity
+The observed convergence rates in the $L^{2}$ norm of the velocity
 field for the analytic case for each method, calculated from a series
 of refined meshes with $n$ in $\{8, 16, 32, 64\}$, are presented in
 Table~\ref{tab:terrel:vel_error}. The optimal rate is $q + 1$, which is
@@ -666,7 +668,6 @@ The Crouzeix--Raviart and MINI elements are only implemented for low-order
 bases. For the sake of comparison, they are computed on a finer mesh
 that has a comparable number of degrees of freedom to the fourth-order
 Taylor--Hood element.
-
 Figure~\ref{fig:terrel:4th_Order:vel} compares the $L^{2}$ error in the
 velocity for the different methods. The velocity approximation appears
 to converge for all elements.  The $L^{2}$ error in the pressure is
@@ -678,28 +679,28 @@ in Figure~\ref{fig:terrel:4th_Order:div}.  The divergence error for the
 Crouzeix--Raviart and Scott--Vogelius methods are zero to within machine
 precision for all meshes, as predicted by theory. The divergence error for
 the MINI element is considerably greater than that for the other methods.
-
+%%
 \begin{figure}
   \centering
   \includegraphics[width=\largefig]{chapters/terrel/pdf/vel_4.pdf}
   \caption{Velocity error of analytical test cases.}
   \label{fig:terrel:4th_Order:vel}
 \end{figure}
-
+%%
 \begin{figure}
   \centering
   \includegraphics[width=\largefig]{chapters/terrel/pdf/press_4.pdf}
   \caption{Pressure error of analytical test cases.}
   \label{fig:terrel:4th_Order:press}
 \end{figure}
-
+%%
 \begin{figure}
   \centering
   \includegraphics[width=\largefig]{chapters/terrel/pdf/div_4.pdf}
   \caption{Divergence error of analytical test cases.}
   \label{fig:terrel:4th_Order:div}
 \end{figure}
-
+%%
 Figure~\ref{fig:terrel:4th_Order:run} presents the run-time for the
 various fourth-order cases.  All run-times, using a 2.6 GHz Intel
 Xeon, measure the assembly and linear system solve time in the Python
@@ -758,7 +759,7 @@ fixed point iteration to converge.
 Comparisons between different finite elements for the Stokes problem
 have been presented. The flexibility afforded by automated code
 generation has been demonstrated via the ease with which solvers for a
-range of methods could be produced. The observed convergence rates for
+range of methods can be produced. The observed convergence rates for
 all cases are consistent with \emph{a~priori} estimates. Of the
 elements examined, the Crouzeix--Raviart element and the
 Scott--Vogelius lead to the smallest divergence error and Taylor--Hood
